third_party/move/move-compiler-v2/tests/checking/typing/vector_with_non_base_type.exp

Diagnostics:
error: invalid type instantiation `&u64`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type.move:4:17
  │
4 │         let v = vector<&u64>[];
  │                 ^^^^^^
